# MapEverything

./: .gitattributes  .gitignore  CONCEPT.md  PROPOSED_FEATURES.md  README.md  TODO.md
MapEverything/MapEverything/: ARViewContainer.swift  AdaptiveMappingModePolicy.swift  BLEBeaconTelemetryManager.swift  BlueprintExporter.swift  ContentView.swift  CurrentWiFiTelemetryManager.swift  DepthAnythingProcessor.swift  EnvironmentModel.swift  GeoTileProvider.swift  GeoTileProviderConfiguration.swift  GeoTilePublisher.swift  IndoorLocalizationManager.swift  Info.plist  LaunchScreen.storyboard  LocalROS2BagRecorder.swift  MapEverythingApp.swift  MapGeoreferencer.swift  MappingFileCleanupManager.swift  MappingPersistenceModels.swift  MappingSessionManager.swift  MeshExporter.swift  MeshGenerator.swift  MeshSnapshotMessageSchema.swift  (+15 more)
MapEverything/MapEverything.xcodeproj/: project.pbxproj
docs/: app-store-publishing-plan.md  geospatial-provider-decision.md  ios-radio-restrictions.md  robotics-mapping-concept.md  ros2-companion-package.md  validation-plan.md
ros2/reconstructor_msgs/: CMakeLists.txt  package.xml
ros2/reconstructor_msgs/msg/: DepthAnythingCalibration.msg  GPSMetadata.msg  GeoRasterTile.msg  GeoTileInfo.msg  IndoorLocalization.msg  MappingSession.msg  MeshSnapshot.msg  PublisherStats.msg  RadioObservation.msg
tools/: app-store-export-options.plist  app-store-release-check.py  build-and-source-mapeverything-msgs.sh  mapeverything-local-bag-to-ros2.py  mapeverything_0.db3  metadata.yaml  rosbridge-throughput-benchmark.py  run-rosbridge-recorder.py
(+54 files in other folders)
