<?xml version="1.0"?>
<package format="3">
  <name>reconstructor_msgs</name>
  <version>0.1.0</version>
  <description>Custom ROS2 message definitions emitted by MapEverything.</description>
  <maintainer email="maintainers@example.com">MapEverything maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
